--- a/front-end/package.json
+++ b/front-end/package.json
@@ -10,13 +10,25 @@
     "@types/node": "^16.11.65",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "axios": "^1.1.2",
+    "bootstrap": "^5.2.2",
+    "react": "^18.0.0",
+    "react-redux": "^7.2.2",
+    "react-dom": "^18.0.0",
     "react-router": "^5.2.0",
-    "react-router-dom": "^5.2.0",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.1",
+    "reactstrap": "^9.1.4",
+    "redux": "~4.1.0",
     "typescript": "^4.8.4",
     "web-vitals": "^2.1.4"
+  },
+  "devDependencies":{
+    "@types/react": "~18.0.0",
+    "@types/react-dom": "~18.0.0",
+    "@types/react-redux": "~7.1.5",
+    "@types/react-router": "~5.1.2",
+    "@types/react-router-dom": "~5.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
