--- a/front-end/package.json
+++ b/front-end/package.json
@@ -13,12 +13,12 @@
     "axios": "^1.1.2",
     "bootstrap": "^5.2.2",
     "react": "^18.0.0",
+    "react-bootstrap": "^2.5.0",
     "react-dom": "^18.0.0",
     "react-redux": "^7.2.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.1",
-    "reactstrap": "^9.1.4",
     "redux": "~4.1.0",
     "sass": "^1.55.0",
     "typescript": "^4.8.4",
