--- a/front-end/package.json
+++ b/front-end/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^5.2.2",
     "react": "^18.0.0",
     "react-bootstrap": "^2.5.0",
+    "react-bootstrap-icons": "^1.9.1",
     "react-dom": "^18.0.0",
     "react-redux": "^7.2.2",
     "react-router": "^5.2.0",
